maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:13: error: not found: value setDireciton
  setDireciton(pos); // bring back to the initial position
  ^